log/build_2026-06-30_18-30-53/skai_bringup/stderr.log
  File "/home/tony/SKAI_clean_vision/install/skai_bringup/lib/python3.12/site-packages/skai_bringup/add_leaf.py", line 251
    p21 = [-0.756,,-0.014,1.769,-0.779,0.00]
                  ^
SyntaxError: invalid syntax

